# TestParser

./: README_TG.md  main.py  pyproject.toml  requirements.txt  start_all.py  telegram_bot.py
SortingResumes/: readme.md  sort_by_relevance.py
rabota_ua_parser/: rabota_ua_parser.py
work_ua_parser/: parser_work.py
